- added argon2d password hash provider:   * for this to work properly we needed to add new PasswordPolicy implementations   * PasswordPolicy is now also passed directly to the PasswordHashProvider's encode method     to be able to extract the configured policies. - smaller fixes related to build. maven-plugin-antrun does not have any version info, resulting   in posibly the wrong version being used. had to add commons-logging as dep for antrun to work.

--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@
         <module>core</module>
         <module>dependencies</module>
         <module>server-spi</module>
+        <module>argon2d_hash</module>
         <module>saml-core-api</module>
         <module>saml-core</module>
         <module>proxy</module>
