--- a/distribution/saml-adapters/wildfly-adapter/wildfly-modules/pom.xml
+++ b/distribution/saml-adapters/wildfly-adapter/wildfly-modules/pom.xml
@@ -130,6 +130,11 @@
                         <artifactId>js</artifactId>
                         <version>1.7R2</version>
                     </dependency>
+                    <dependency>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                        <version>1.2</version>
+                    </dependency>
                 </dependencies>
             </plugin>
             <plugin>
